--- a/harjoitukset.html
+++ b/harjoitukset.html
@@ -12,53 +12,54 @@
 
 <hr>
 
-<h3>Jämbeck Marja [K8691/TTV16S2] / kurssi: TTV18S3, syksy 2019</h3>
+<h3>Jämbeck Marja [K8691/TTV16S2] / kurssi: TTV18S2, kevät 2020</h3>
 
 <pre><a href="https://student.labranet.jamk.fi/~K8691/ttms0900-webpalvelinohjelmointi/00-php-syntax-highlighter.php">PHP Syntax Highlighter</a></pre>
 
 <h4>Harjoitukset 1 / Ratkaisut</h4>
 <pre>
-Palautuspäivämäärä 10.9.2019
+Palautuspäivämäärä 10.1.2020
 </pre>
 <ul>
-<li><a href="http://student.labranet.jamk.fi/~K8691/ttms0900-webpalvelinohjelmointi/harjoitus1_1.php">Tehtävä 1</a> [4/4]</li>
+<li><a href="http://student.labranet.jamk.fi/~K8691/ttms0900-webpalvelinohjelmointi/harjoitus1_1.html">Tehtävä 1</a> [4/4]</li>
 <li><a href="http://student.labranet.jamk.fi/~K8691/ttms0900-webpalvelinohjelmointi/harjoitus1_2-eurolaskin.php">Tehtävä 2</a> [4/4]</li>
 <li><a href="http://student.labranet.jamk.fi/~K8691/ttms0900-webpalvelinohjelmointi/harjoitus1_3.php">Tehtävä 3</a> [4/4]</li>
 <li><a href="http://student.labranet.jamk.fi/~K8691/ttms0900-webpalvelinohjelmointi/harjoitus1_4.php">Tehtävä 4</a> [4/4]</li>
-<li><a href="http://student.labranet.jamk.fi/~K8691/ttms0900-webpalvelinohjelmointi/harjoitus1_5.php">Tehtävä 5</a> [1/4]</li>
+<li><a href="http://student.labranet.jamk.fi/~K8691/ttms0900-webpalvelinohjelmointi/harjoitus1_5.php">Tehtävä 5</a> [4/4]</li>
 </ul>
 
 <h4>Harjoitukset 2 / Ratkaisut</h4>
 <pre>
-Palautuspäivämäärä 16.9.2019
-En ehtinyt tehdä palautuspäivään mennessä, tehty myöhemmin.
+Palautuspäivämäärä 20.1.2020
+HUOM! Tehtävä 2 toimii PHP-versiolla 7.4.1, vaikka student-palvelimella antaa virhe-ilmoituksen.
 </pre>
 <ul>
-    <li><a href="http://student.labranet.jamk.fi/~K8691/ttms0900-webpalvelinohjelmointi/harjoitus2_1.php">Tehtävä 1</a> [3/3]</li>
-    <li><a href="http://student.labranet.jamk.fi/~K8691/ttms0900-webpalvelinohjelmointi/harjoitus2_2.php">Tehtävä 2</a> [2/3] värit vaihtuvat, mutta radiopainikket eivät pysy valittuna (oikein toimiva toinen versio <a href="http://student.labranet.jamk.fi/~K8691/ttms0900-webpalvelinohjelmointi/harjoitus2_2_select.php">pudotus-valikoilla</a>)</li>
-    <li><a href="http://student.labranet.jamk.fi/~K8691/ttms0900-webpalvelinohjelmointi/harjoitus2_3.php">Tehtävä 3</a> [4/4]</li>
-    <li><a href="http://student.labranet.jamk.fi/~K8691/ttms0900-webpalvelinohjelmointi/harjoitus2_4.php">Tehtävä 4</a> [1/4]</li>
-    <li><a href="http://student.labranet.jamk.fi/~K8691/ttms0900-webpalvelinohjelmointi/harjoitus2_5.php">Tehtävä 5</a> [0/4]</li>
+<li><a href="http://student.labranet.jamk.fi/~K8691/ttms0900-webpalvelinohjelmointi/harjoitus2_1.php">Tehtävä 1</a> [3/3]</li>
+<li><a href="http://student.labranet.jamk.fi/~K8691/ttms0900-webpalvelinohjelmointi/harjoitus2_2.php">Tehtävä 2</a> [3/3]</li>
+<li><a href="http://student.labranet.jamk.fi/~K8691/ttms0900-webpalvelinohjelmointi/harjoitus2_3.php">Tehtävä 3</a> [4/4]</li>
+<li><a href="http://student.labranet.jamk.fi/~K8691/ttms0900-webpalvelinohjelmointi/harjoitus2_4.php">Tehtävä 4</a> [1/4] Vain lomake joka ei toimi, ratkaisun yritystä</li>
+<li><a href="http://student.labranet.jamk.fi/~K8691/ttms0900-webpalvelinohjelmointi/harjoitus2_5.php">Tehtävä 5</a> [0/4]</li>
 </ul>
 
 <h4>Harjoitukset 3 / Ratkaisut</h4>
 <pre>
-Palautuspäivämäärä 23.9.2019
-En ehtinyt tehdä palautuspäivään mennessä, tehty myöhemmin.
+Palautuspäivämäärä 27.1.2020
+Vain tehtävien aloitusta. En ehtinyt toteuttaa tehtävänannoissa vaadittuja toimintoja palautuspäivämäärään mennessä.
 </pre>
 <ul>
-    <li><a href="http://student.labranet.jamk.fi/~K8691/ttms0900-webpalvelinohjelmointi/harjoitus3_1.php">Tehtävä 1</a> [0/6]</li>
-    <li><a href="http://student.labranet.jamk.fi/~K8691/ttms0900-webpalvelinohjelmointi/harjoitus3_2.php">Tehtävä 2</a> [0/6]</li>
-    <li><a href="http://student.labranet.jamk.fi/~K8691/ttms0900-webpalvelinohjelmointi/harjoitus3_3.php">Tehtävä 3</a> [0/8]</li>
+<li><a href="http://student.labranet.jamk.fi/~K8691/ttms0900-webpalvelinohjelmointi/harjoitus3_1.php">Tehtävä 1</a> [1/6] vain liikkuminen ostoskorin ja tuotelistauksen välillä</li>
+<li><a href="http://student.labranet.jamk.fi/~K8691/ttms0900-webpalvelinohjelmointi/harjoitus3_2.php">Tehtävä 2</a> [0/6]</li>
+<li><a href="http://student.labranet.jamk.fi/~K8691/ttms0900-webpalvelinohjelmointi/harjoitus3_3.php">Tehtävä 3</a> [0/8]</li>
 </ul>
 
 <h4>Harjoitukset 4 / Ratkaisut</h4>
 <pre>
-Palautuspäivämäärä 30.9.2019
+Palautuspäivämäärä 27.1.2020
+Vain tehtävien aloitusta. En ehtinyt toteuttaa tehtävänannoissa vaadittuja toimintoja palautuspäivämäärään mennessä.
 </pre>
 <ul>
-    <li><a href="http://student.labranet.jamk.fi/~K8691/ttms0900-webpalvelinohjelmointi/harjoitus4_1.php">Tehtävä 1</a> [0/6]</li>
-    <li><a href="http://student.labranet.jamk.fi/~K8691/ttms0900-webpalvelinohjelmointi/harjoitus4_2.php">Tehtävä 2</a> [0/16]</li>
+<li><a href="http://student.labranet.jamk.fi/~K8691/ttms0900-webpalvelinohjelmointi/harjoitus4_1.php">Tehtävä 1</a> [0/6]</li>
+<li><a href="http://student.labranet.jamk.fi/~K8691/ttms0900-webpalvelinohjelmointi/harjoitus4_2.php">Tehtävä 2</a> [0/16]</li>
 </ul>
 
 </body>
