--- a/webpalvelinohjelmointi.html
+++ b/webpalvelinohjelmointi.html
@@ -25,6 +25,7 @@
                             class="fa fa-linkedin fa-fw" style="font-size:24px"></i></a></li>
                 <li class="navi"><a href="#1">Harjoitukset 1</a></li>
                 <li class="navi"><a href="#2">Harjoitukset 2</a></li>
+                <li class="navi"><a href="#3">Harjoitukset 3</a></li>
             </ul>
         </nav>
     </header>
@@ -55,12 +56,28 @@
         <section>
             <article>
                 <h2 id="2">Harjoitukset 2</h2>
-                <p><pre>Palautuspäivämäärä: </pre>
-                    <strong><a href="https://student.labranet.jamk.fi/~K8691/ttms0900-webpalvelinohjelmointi/harjoitus2_1.html">Tehtävä 1</a></strong> [0/3]<br>
-                    <strong><a href="https://student.labranet.jamk.fi/~K8691/ttms0900-webpalvelinohjelmointi/harjoitus2_2.php">Tehtävä 2</a></strong> [0/3]<br>
-                    <strong><a href="https://student.labranet.jamk.fi/~K8691/ttms0900-webpalvelinohjelmointi/harjoitus2_3.php">Tehtävä 3</a></strong> [0/4]<br>
-                    <strong><a href="https://student.labranet.jamk.fi/~K8691/ttms0900-webpalvelinohjelmointi/harjoitus2_4.php">Tehtävä 4</a></strong> [0/4]<br>
-                    <strong><a href="https://student.labranet.jamk.fi/~K8691/ttms0900-webpalvelinohjelmointi/harjoitus2_5.php">Tehtävä 5</a></strong> [0/4]</p>
+                <p>
+                    <pre>Palautuspäivämäärä: 1.6.2020</pre>
+                    <strong><a href="https://student.labranet.jamk.fi/~K8691/ttms0900-webpalvelinohjelmointi/harjoitus2_1.php">Tehtävä 1</a></strong> [3/3]<br>
+                    <strong><a href="https://student.labranet.jamk.fi/~K8691/ttms0900-webpalvelinohjelmointi/harjoitus2_2.php">Tehtävä 2</a></strong> [3/3] Toimii kotikoneen xampp-serverillä PHP-versiossa 7.4.6<br>
+                    <strong><a href="https://student.labranet.jamk.fi/~K8691/ttms0900-webpalvelinohjelmointi/harjoitus2_3.php">Tehtävä 3</a></strong> [4/4]<br>
+                    <strong><a href="https://student.labranet.jamk.fi/~K8691/ttms0900-webpalvelinohjelmointi/harjoitus2_4.php">Tehtävä 4</a></strong> [2/4]<br>
+                    <strong><a href="https://student.labranet.jamk.fi/~K8691/ttms0900-webpalvelinohjelmointi/harjoitus2_5.php">Tehtävä 5</a></strong> [1/4]
+                </p>
+            </article>
+        </section>
+
+        <section>
+            <article>
+                <h2 id="3">Harjoitukset 3</h2>
+                <p>
+                    <pre>Palautuspäivämäärä: </pre>
+                    <strong><a href="https://student.labranet.jamk.fi/~K8691/ttms0900-webpalvelinohjelmointi/harjoitus3_1.php">Tehtävä 1</a></strong> [0/3]<br>
+                    <strong><a href="https://student.labranet.jamk.fi/~K8691/ttms0900-webpalvelinohjelmointi/harjoitus3_2.php">Tehtävä 2</a></strong> [0/3]<br>
+                    <strong><a href="https://student.labranet.jamk.fi/~K8691/ttms0900-webpalvelinohjelmointi/harjoitus3_3.php">Tehtävä 3</a></strong> [0/4]<br>
+                    <strong><a href="https://student.labranet.jamk.fi/~K8691/ttms0900-webpalvelinohjelmointi/harjoitus3_4.php">Tehtävä 4</a></strong> [0/4]<br>
+                    <strong><a href="https://student.labranet.jamk.fi/~K8691/ttms0900-webpalvelinohjelmointi/harjoitus3_5.php">Tehtävä 5</a></strong> [0/4]
+                </p>
             </article>
         </section>
     </main>
