--- a/webpalvelinohjelmointi.html
+++ b/webpalvelinohjelmointi.html
@@ -34,7 +34,10 @@
         <section>
             <article>
                 <p>
-                    <strong><a href="https://student.labranet.jamk.fi/~K8691/ttms0900-webpalvelinohjelmointi/00-php-syntax-highlighter.php">PHP Syntax Highlighter</a></strong>                                       
+                    <strong><a href="https://student.labranet.jamk.fi/~K8691/ttms0900-webpalvelinohjelmointi/00-php-syntax-highlighter.php">PHP Syntax Highlighter</a></strong><br>
+                    <br>
+                    Tehtävät tehty PHP-versiolla 7.4.6, mutta koska JAMK:in student-palvelin käyttää vanhaa versiota 5.3.3, voi tehtävien toiminnassa olla ongelmia. 
+                    Kaikkien tehtävien lähdekoodi on nähtävissä PHP Syntax Highlighterillä.                             
                 </p>
             </article>
         </section>
@@ -57,12 +60,12 @@
             <article>
                 <h2 id="2">Harjoitukset 2</h2>
                 <p>
-                    <pre>Palautuspäivämäärä: 1.6.2020</pre>
+                    <pre>Palautuspäivämäärä: 3.6.2020</pre>
                     <strong><a href="https://student.labranet.jamk.fi/~K8691/ttms0900-webpalvelinohjelmointi/harjoitus2_1.php">Tehtävä 1</a></strong> [3/3]<br>
                     <strong><a href="https://student.labranet.jamk.fi/~K8691/ttms0900-webpalvelinohjelmointi/harjoitus2_2.php">Tehtävä 2</a></strong> [3/3] Toimii kotikoneen xampp-serverillä PHP-versiossa 7.4.6<br>
                     <strong><a href="https://student.labranet.jamk.fi/~K8691/ttms0900-webpalvelinohjelmointi/harjoitus2_3.php">Tehtävä 3</a></strong> [4/4]<br>
-                    <strong><a href="https://student.labranet.jamk.fi/~K8691/ttms0900-webpalvelinohjelmointi/harjoitus2_4.php">Tehtävä 4</a></strong> [2/4]<br>
-                    <strong><a href="https://student.labranet.jamk.fi/~K8691/ttms0900-webpalvelinohjelmointi/harjoitus2_5.php">Tehtävä 5</a></strong> [1/4]
+                    <strong><a href="https://student.labranet.jamk.fi/~K8691/ttms0900-webpalvelinohjelmointi/harjoitus2_4.php">Tehtävä 4</a></strong> [4/4] Toimii kotikoneen xampp-serverillä PHP-versiossa 7.4.6<br>
+                    <strong><a href="https://student.labranet.jamk.fi/~K8691/ttms0900-webpalvelinohjelmointi/harjoitus2_5.php">Tehtävä 5</a></strong> [1/4] Pelkkä kysymyslomake, en ehtinyt tehdä toimivaa pistelaskua.
                 </p>
             </article>
         </section>
